# PyTorchNNver2

./: CMakeLists.txt  PyTorchNN.cpp  PyTorchNN.h  README.md  main.py
